--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -49,6 +49,7 @@ table.table a {
 }
 
 .table-dark {
+  color: #000;
   background-color: transparent;
   &.table-bordered {
     border: 1px solid var(--global-divider-color) !important;
