--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -1,33 +1,33 @@
 <div class="news">
   {% if site.news != blank %}
-    {% assign news_size = site.news | size %}
-    <div
-      class="table-responsive"
-      {% if include.limit and site.announcements.scrollable and news_size > 3 %}
-        style="max-height: 60vw"
-      {% endif %}
-    >
-      <table class="table table-sm table-borderless">
-        {% assign news = site.news | reverse %}
-        {% if include.limit and site.announcements.limit %}
-          {% assign news_limit = site.announcements.limit %}
-        {% else %}
-          {% assign news_limit = news_size %}
-        {% endif %}
-        {% for item in news limit: news_limit %}
-          <tr>
-            <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
-            <td>
-              {% if item.inline %}
-                {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
-              {% else %}
-                <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-              {% endif %}
-            </td>
-          </tr>
-        {% endfor %}
-      </table>
-    </div>
+    {% assign news_by_year = site.news | group_by_exp: "item", "item.date | date: '%Y'" %}
+    {% assign news_by_year = news_by_year | sort: "name" | reverse %}
+
+    {% for year_group in news_by_year %}
+      <h3>{{ year_group.name }}</h3>
+      <div class="table-responsive">
+        <table class="table table-sm table-borderless">
+          {% assign year_news = year_group.items | reverse %}
+          {% if include.limit and site.announcements.limit %}
+            {% assign news_limit = site.announcements.limit %}
+          {% else %}
+            {% assign news_limit = year_news.size %}
+          {% endif %}
+          
+          {% for item in year_news limit: news_limit %}
+            <tr>
+              <td>
+                {% if item.inline %}
+                  {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+                {% else %}
+                  <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                {% endif %}
+              </td>
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
+    {% endfor %}
   {% else %}
     <p>No news so far...</p>
   {% endif %}
